--- a/build.gradle
+++ b/build.gradle
@@ -21,21 +21,28 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.4.2.RELEASE'
     compile(group: 'org.springframework.boot', name: 'spring-boot-starter', version:'1.4.2.RELEASE') {
         exclude(module: 'commons-logging')
     }
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version:'1.4.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.4.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version:'1.4.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version:'1.4.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jersey', version:'1.4.2.RELEASE'
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-multipart', version:'2.24'
     compile(group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version:'2.24') {
         exclude(module: '*')
     }
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '1.4.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version:'1.4.2.RELEASE'
+
     compile group: 'mysql', name: 'mysql-connector-java', version:'5.1.40'
     compile group: 'org.hibernate', name: 'hibernate-core', version:'5.2.5.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.2.4.Final'
     compile group: 'com.google.guava', name: 'guava', version:'19.0'
     compile group: 'joda-time', name: 'joda-time', version:'2.8.2'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.12'
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '0.7.7'
+
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.4.2.RELEASE') {
         exclude(module: 'commons-logging')
     }
